Initial commit of Drupal theme version.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-
-ios_inspired/images/.DS_Store
-
-ios_inspired/.DS_Store
-
+# Mac artifacts
+*/.DS_Store
 .DS_Store
+
+# Eclipse build
+.buildpath
+.project
+.settings
